...
                              label: "map",
                              color: Colors.green[800]!,
                              auth: widget.auth),
                          HomePageButton(
                              route: '/mapCreateNest',
                              icon: Icons.add,
                              label: "add nest",
                              color: Colors.purple[800]!,
                              auth: widget.auth),
                        ],
                      ),
                    ),

...
                              ],
                            ),
                          ),
                          HomePageButton(
                              route: "/findNest",
                              icon: Icons.search,
                              label: "find nest",
                              color: Colors.red[900]!,
                              auth: widget.auth),
                        ],
                      ),
                    ),
                    SizedBox(
...
