...
              title: Text('New user', style: TextStyle(color: Colors.black)),
              content: SingleChildScrollView(child:Column(
                mainAxisSize: MainAxisSize.min,
                children: [
                  TextField(
                    style: TextStyle(color: Colors.black),
                    decoration: InputDecoration(hintText: 'Email', hintStyle: TextStyle(color: Colors.deepPurpleAccent)),
                    onChanged: (value) {
                      email = value;
                    },
                  ),
                  if (warning != null)
                    Text(
...
            return Opacity(
                opacity: _disable ? 0.5 : 1,
                child:
                AbsorbPointer(
                    absorbing: _disable,
                    child:AlertDialog(
              title: Text('Login with email', style: TextStyle(color: Colors.black)),
              content: SingleChildScrollView(child:

              Column(
                mainAxisSize: MainAxisSize.min,
                children: [
                  TextField(
...
                    onChanged: (value) {
                      _userEmail = value;
                    },
                  ),
                  TextField(
                    style: TextStyle(color: Colors.black),
                    decoration: InputDecoration(hintText: 'Password', hintStyle: TextStyle(color: Colors.deepPurpleAccent)),
                    onChanged: (value) {
                      _userPassword = value;
                    },
                  ),
                  SizedBox(height: 10),
                  ElevatedButton.icon(
                    key: Key('loginButton'),
                    onPressed: () async {
                      setState(() {
                        _disable = true;
                      });
                      await _login('existingEmail');
                      setState(() {
...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: Text('Settings'),
      ),
      body: Padding(
        padding: const EdgeInsets.all(16.0),
        child: SingleChildScrollView(
        child: Column(
          children: <Widget>[
...
